# jazz-bas

./: .gitignore  hi.py  pyproject.toml
jass_bas/: tokenize.py
jazz_bas/: __init__.py  compile.py  exceptions.py  execute.py  parse.py  tokenize.py  utils.py
jazz_bas/cli/: jazzbas.py  jazzbasc.py
jazz_bas/runtime/: __init__.py  require_python.py  script_requirements.py  strings.py
tests/: test_basic_io.py  test_embeddable_python.py  test_math.py  test_tokenizer.py
tests/bas/: basic_math.bas  hello.bas  hello_name.bas  python_in_basic.bas
