[project]
name = "jass-bas"
version = "0.0.1"
description = "BASIC to Python compiler & executor"
authors = [
    {name = "Alexander Rusakevich",email = "mr.alexander.rusakevich@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "jass"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
