[tool.poetry]
name = "jazz-bas"
version = "0.0.1"
description = "BASIC to Python compiler & BASIC interpreter"
authors = ["Alexander Rusakevich <mr.alexander.rusakevich@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2024.11.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
